objects/Case_Escalation_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Escalation_Level__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Escalation Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Escalation_SLA_Max__c</fullName>
        <label>Escalation SLA Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Escalation_SLA_Min__c</fullName>
        <label>Escalation SLA Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Case_Escalation_Settings</label>
</CustomObject>